test/cases/navy.js
var Navy;
(function (Navy) {
    var Ship = (function () {
        function Ship() {
        }
        return Ship;
    })();
    Navy.Ship = Ship;
})(Navy || (Navy = {}));
///<reference path="ship.ts" />
var Navy;
(function (Navy) {
    var Fleet = (function () {
        function Fleet() {
        }
        return Fleet;
    })();
    Navy.Fleet = Fleet;
})(Navy || (Navy = {}));
